  
- Fixed mode selection by exact file name match. This is useful for
  distinguishing Maven pom.xml files from other xml files. (Dale Anson)  

- Fixed wrong mode detection on drag and drop from GNOME Commander.
  (#3374207 - Shlomy Reinstein)

- Fixed deadlock (jEdit freeze) when multiple files are dragged into the text
  area from file managers. (Shlomy Reinstein)
}}}
{{{ API Changes

- TaskManager.countTasks() returns the number of tasks in queue
  (Matthieu Casanova)

- New methods JEditBuffer.setContextInsensitive(boolean) and
  JEditBuffer.GetContextInsensitive() to manage the new attribute
  contextInsensitive of JEditBuffer. By default it is set by the
  edit mode, but you can change it's value (careful, it can break
  the syntax highlight of your buffer if you don't know what you do)
  (Matthieu Casanova)

- New method TextArea.getVisibleLineText(screenLine) and
  TextArea.getVisibleLineSegment() that returns
  the visible part of the given line (Matthieu Casanova)

- API made public:
  org.gjt.sp.jedit.browser.VFSFileNameField (Marcelo Vanzin)

- API made private:
  FileVFS.modified
  (Matthieu Casanova)

- Removed Deprecated apis :
  EditPlugin.createMenuItems(Vector menuItems)
  EditPlugin.createOptionPanes(OptionsDialog optionsDialog)
  HistoryModel.clear()
  JEditTextArea.getSelectionStart()
  JEditTextArea.getSelectionStart(int line)
  JEditTextArea.getSelectionStartLine()
  JEditTextArea.setSelectionStart(int selectionStart)
  JEditTextArea.getSelectionEnd()
  JEditTextArea.getSelectionEnd(int line)
  JEditTextArea.getSelectionEndLine()
  JEditTextArea.setSelectionEnd(int selectionEnd)
  JEditTextArea.select(int start, int end)
  JEditTextArea.select(int start, int end, boolean doElectricScroll)
  JEditTextArea.isSelectionRectangular()
  TextAreaPainter.setAntiAliasEnabled(boolean isEnabled)
  TextAreaPainter.isAntiAliasEnabled()
  FoldHandler.SERVICE
  Buffer.addBufferChangeListener(BufferChangeListener listener, int priority)